agregado configuracion multer

--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -21,8 +21,8 @@
 
                 </section>
 
-                 <!--Inicio articulos-->
-                 <section id="articles">
+                <!--Inicio articulos-->
+                <section id="articles">
                     <h2>Ultimos articulos</h2>
                     <div id="container-products">
                         <div class="box-product">
@@ -82,15 +82,15 @@
                         </div>
 
 
-                    <article id="blog">
-                        <a href="">Registrate </a>
-                    </article>
+                        <article id="blog">
+                            <a href="/user/create">Registrate </a>
+                        </article>
 
                 </section>
                 <!--Fin articulos-->
 
                 <!--Inicio barra lateral-->
-                
+
                 <aside id="lateral">
 
                     <h3>Bucar</h3>
@@ -113,7 +113,7 @@
                             <input type="submit" value="Entrar">
                             <input type="reset" value="Borrar">
 
-                            <a href="#">Registrate aqui</a>
+                            <a href="/user/create">Registrate aqui</a>
                             <a href="#">¿Has olvidado tu contraseña?</a>
 
                         </form>
@@ -138,7 +138,7 @@
                 </aside>
                 <!--fIN DE barra lateral-->
 
-               
+
             </section>
             <!--Inicio Footer-->
             <div class="clearfix"></div>
