--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -6,7 +6,7 @@
         </div>
         <nav id="menu">
             <ul>
-                <li> <a href="#">Inicio</a></li>
+                <li> <a href="/">Inicio</a></li>
                 <li> <a href="#">Productos</a></li>
                 <li> <a href="#">Carrito</a></li>
                 <li> <a href="#">Contacto</a></li>
