--- a/src/views/formRegister.ejs
+++ b/src/views/formRegister.ejs
@@ -18,7 +18,7 @@
                         <div class="box-register">
                             <input type="password" name="password" placeholder="Indica tu password">
                         </div>
-                
+
                         <div class="box-register">
                             <input type="email" name="email" id="email" placeholder="Indica tu email">
                         </div>
@@ -38,9 +38,11 @@
                                 <option value="venezuela">Venezuela</option>
                             </select>
                         </div>
-
-                        <div class="box-register">
-                            <input type="file" name="imageUsers">
+                        <div class="box-imageUsers">
+                            <h3>Sube tu foto</h3>
+                            <div class="box-register">
+                                <input type="file" name="imageUsers">
+                            </div>
                         </div>
 
                         <div class="box-register">
@@ -49,7 +51,7 @@
                                 <button type="reset">Borrar</button>
                             </div>
                         </div>
-                    
+
                     </form>
                 </div>
             </div>
