--- a/src/views/partials/head.ejs
+++ b/src/views/partials/head.ejs
@@ -6,5 +6,6 @@
     <!-- <link rel="icon" type="favicon/x-icon" href="/img/supertux.png"> -->
     <link rel="stylesheet" type="text/css" href="/css/styles.css">
     <link rel="stylesheet" href="/css/loginAndRegister.css">
+    <link rel="stylesheet" href="/css/usersStyle.css">
     <link rel="stylesheet" type="text/css" href="/css/homeMediaQuery.css">
 </head>
