--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -1,5 +1,5 @@
 <header id="header">
-    <div class="wrap">
+    <!-- <div class="wrap"> -->
         <div id="logo">
             <span class="gear">N</span>
             <h3>Casquillera</h3>
@@ -12,5 +12,5 @@
                 <li> <a href="#">Contacto</a></li>
             </ul>
         </nav>
-    </div>
+    <!-- </div> -->
 </header>
