--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -23,7 +23,7 @@
 
                 <!--Inicio articulos-->
                 <section id="articles">
-                    <h2>Ultimos articulos</h2>
+                    <h2>Nuestros Productos</h2>
                     <div id="container-products">
                         <div class="box-product">
                             <div class="box-img">
@@ -82,9 +82,9 @@
                         </div>
 
 
-                        <article id="blog">
+                        <!-- <article id="blog">
                             <a href="/user/create">Registrate </a>
-                        </article>
+                        </article> -->
 
                 </section>
                 <!--Fin articulos-->
@@ -92,14 +92,6 @@
                 <!--Inicio barra lateral-->
 
                 <aside id="lateral">
-
-                    <h3>Bucar</h3>
-                    <div id="search">
-                        <form action="">
-                            <input type="text" />
-                            <input type="button" value="L" class="icon" />
-                        </form>
-                    </div>
 
                     <h3>Login</h3>
                     <div id="login" class="aside-box">
@@ -147,6 +139,9 @@
                 <!--Inicio Footer-->
 
 
+                <!--Script-->
+            <script src="/navScript.js"></script>
     </body>
+
 
 </html>
