--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -1,16 +1,59 @@
-<header id="header">
-    <!-- <div class="wrap"> -->
-        <div id="logo">
-            <span class="gear">N</span>
-            <h3>Casquillera</h3>
+
+<nav class="menu">
+    <section class="menu_container">
+        <h1 class="menu_logo">Casquillera</h1>
+
+       
+        <ul class="menu_links">
+            <li class="menu_item">
+                <a href="/" class="menu_link">Inicio</a>
+            </li>
+
+            <li class="menu_item menu_item--show">
+                <a href="#" class="menu_link">Nuestas cepas <img src="/img/svg/arrow.svg" class="menu_arrow"></a>
+
+                <ul class="menu_nesting">
+                    <li class="menu_inside">
+                        <a href="/products" class="menu_link menu_link--inside ">Nuestros productos</a>
+                    </li>
+                    <li class="menu_inside">
+                        <a href="/products/create" class="menu_link menu_link--inside ">Crea tu producto</a>
+                    </li>
+                    <li class="menu_inside">
+                        <a href="" class="menu_link menu_link--inside ">About 3</a>
+                    </li>
+                </ul>
+            </li>
+
+            <li class="menu_item menu_item--show">
+                <a href="#" class="menu_link">Tips y Más<img src="/img/svg/arrow.svg" class="menu_arrow"></a>
+
+                <ul class="menu_nesting">
+                    <li class="menu_inside">
+                        <a href="" class="menu_link menu_link--inside ">Projects 1</a>
+                    </li>
+                    <li class="menu_inside">
+                        <a href="" class="menu_link menu_link--inside ">Projects 2</a>
+                    </li>
+                    <li class="menu_inside">
+                        <a href="" class="menu_link menu_link--inside ">Projects 3</a>
+                    </li>
+                </ul>
+            </li>
+
+            <li class="menu_item">
+                <a href="#" class="menu_link">Contacto</a>
+            </li>
+
+            <div id="search">
+                    <input type="text" placeholder="  Buscar"/>
+                    <input type="button" value="L" class="icon" />
+            </div>
+    
+
+        </ul>
+        <div class="menu_hamburge">
+            <img src="/img/svg/menu.svg" class="menu_img">
         </div>
-        <nav id="menu">
-            <ul>
-                <li> <a href="/">Inicio</a></li>
-                <li> <a href="#">Productos</a></li>
-                <li> <a href="#">Carrito</a></li>
-                <li> <a href="#">Contacto</a></li>
-            </ul>
-        </nav>
-    <!-- </div> -->
-</header>
+    </section>
+</nav>
