--- a/src/views/partials/footer.ejs
+++ b/src/views/partials/footer.ejs
@@ -5,7 +5,7 @@
             <h5>MENÚ</h5>
             <ul>
                 <li> <a href="#">Inicio</a></li>
-                <li> <a href="#">Productos</a></li>
+                <li> <a href="/product">Productos</a></li>
                 <li> <a href="#">Carrito</a></li>
                 <li> <a href="#">Contacto</a></li>
             </ul>
