--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -14,10 +14,10 @@
 
                 <ul class="menu_nesting">
                     <li class="menu_inside">
-                        <a href="/products" class="menu_link menu_link--inside ">Nuestros productos</a>
+                        <a href="/product" class="menu_link menu_link--inside ">Nuestros productos</a>
                     </li>
                     <li class="menu_inside">
-                        <a href="/products/create" class="menu_link menu_link--inside ">Crea tu producto</a>
+                        <a href="/product/create" class="menu_link menu_link--inside ">Crea tu producto</a>
                     </li>
                     <li class="menu_inside">
                         <a href="" class="menu_link menu_link--inside ">About 3</a>
