sequelize depencia instaladas

--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -147,7 +147,7 @@
 
 
                 <!--Script-->
-            <script src="/navScript.js"></script>
+            <script src="/js/navScript.js"></script>
     </body>
 
 
