--- a/src/views/productDetails.ejs
+++ b/src/views/productDetails.ejs
@@ -40,7 +40,7 @@
                 <!--Fin Footer-->
 
                 <!--Script-->
-                <script src="/navScript.js"></script>
+                <script src="/js/navScript.js"></script>
     </body>
 
 </html>
