--- a/src/views/formCreate.ejs
+++ b/src/views/formCreate.ejs
@@ -48,7 +48,7 @@
                 <!--Fin Footer-->
 
                 <!--Script-->
-                <script src="/navScript.js"></script>
+                <script src="/js/navScript.js"></script>
     </body>
 
 </html>
