--- a/src/views/formRegister.ejs
+++ b/src/views/formRegister.ejs
@@ -69,7 +69,7 @@
                 <!--Fin Footer-->
 
                 <!--Script-->
-                <script src="/navScript.js"></script>
+                <script src="/js/navScript.js"></script>
     </body>
 
 </html>
