controller create agregado

--- a/src/views/productEdit.ejs
+++ b/src/views/productEdit.ejs
@@ -20,7 +20,7 @@
                         </div>
 
                         <div class="box-register">
-                            <textarea name="description"  cols="30" rows="10" value="<%= product.description %>"></textarea>
+                            <textarea name="description"  cols="30" rows="10" ><%= product.description %></textarea>
                         </div>
 
                         <div class="box-imageUsers">
