--- a/src/public/css/homeMediaQuery.css
+++ b/src/public/css/homeMediaQuery.css
@@ -211,6 +211,9 @@
   }
 }
 @media (max-width: 474px) {
+  .wrap{
+    margin-top: 100px;
+  }
   #logo {
     float: left;
     margin-bottom: 10px;
