--- a/src/public/css/styles.css
+++ b/src/public/css/styles.css
@@ -35,9 +35,10 @@ body {
 }
 
  .wrap {
-  width: 1200px;
-  margin: 0 auto;
-} 
+   width: 1200px;
+   margin: 0 auto;
+   margin-top: 124px;
+  } 
 
 .gear,
 .icon {
