--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -30,7 +30,7 @@
                                 <img src="/img/arrabalera.jpeg" alt="">
                             </div>
                             <div class="box-details">
-                                <p class="name-product"> <a href="#">Arrabalera</a></p>
+                                <p class="name-product"> <a href="/product/details/2">Arrabalera</a></p>
                                 <p class="price-product">$ 4000</p>
                                 <p class="descrption-product">Ale refrescante y de especiada con fuertes notas a
                                     cítricos de color naranja oscuro, altamente carbonatada, bien lupulada y seca, con
