--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -9,7 +9,7 @@
         <%- include('partials/header.ejs') %>
             <!--Fin cabecera-->
 
-            <section class="wrap wrap-content">
+            <section class="wrap wrap-content wrap-banner">
                 <section id="info">
 
                     <!--Inicio banner-->
