--- a/src/views/productList.ejs
+++ b/src/views/productList.ejs
@@ -11,7 +11,7 @@
            
             <div id="list-user">
                 <div class="panel-users">
-                    <a href="">
+                    <a href="/product/details/<%=productDetail.id%>">
                         <% productDetail.forEach((product) => {%>
                             <div id="box-profile-product">
                                 <div class="profile-product">
