--- a/src/public/css/homeMediaQuery.css
+++ b/src/public/css/homeMediaQuery.css
@@ -214,6 +214,9 @@
   .wrap{
     margin-top: 100px;
   }
+  .wrap-banner{
+    padding: 15px;
+  }
   #logo {
     float: left;
     margin-bottom: 10px;
