--- a/src/views/beer.ejs
+++ b/src/views/beer.ejs
@@ -39,7 +39,7 @@
                         <a href="/product/edit/<%= productId.id %>">
                             <button>Editar Producto</button>
                         </a>
-                        <form action="/product/delete/<%= productId.id %>?_method=delete" method="POST">
+                        <form action="/product/delete/<%= productId.id %>?_method=DELETE" method="POST">
                             <button type="submit">Eliminar</button>
                         </form>
                     </div>
