--- a/src/public/css/loginAndRegister.css
+++ b/src/public/css/loginAndRegister.css
@@ -33,7 +33,7 @@
 #formRegister {
   display: flex;
   justify-content: center;
-  margin-top: 15px;
+  margin-top: 100px;
   margin-bottom: 15px;
 }
 
@@ -91,4 +91,13 @@ select {
 div .error-validation{
   color: red;
   margin-left: 6px;
+}
+
+.is-invalid {
+  color: rgba(255, 0, 0, 0.514);
+  border: 2px solid rgba(255, 0, 0, 0.514);
+}
+.is-valid {
+  color: rgb(0, 153, 255);
+  color: 2px solid rgb(0, 153, 255);
 }
